Fixed issue with navbar having too much space between when actice in mobile version

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -84,12 +84,13 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 90vh;
+      height: auto;
       position: absolute;
-      top: 80px;
       left: -100%;
+      top: 80px;
       opacity: 1;
       transition: all 0.5s ease;
+      padding-bottom: 40px;
     }
   
     .nav-menu.active {
